--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8"/>
     <title>Most Recipes</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" th:href="@{/styles.css}">
 
@@ -14,33 +18,61 @@
 
 <header th:fragment="header">
     <h1 th:text="${title}">Most Recipes</h1>
-    <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-        <li class="nav-item"><a class="nav-link" href="/recipes">All Recipes</a></li>
-        <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li>
-        <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
-    </ul>
-</header>
 
-<div th:fragment="recipe-card">
-    <div th:each="recipe : ${recipes}">
-        <div class="image_container">
-            <a class="image" href="'/details?recipeId=' + ${recipe.id}" th:text="${recipe.name}"></a>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/recipes">The Recipe Project</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li>
+            </ul>
+            <!--TODO make search bar functional-->
+            <form class="navbar-form navbar-left" action="">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item"><a class="nav-link" href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="/register"><span class="glyphicon glyphicon-ok"></span> Register</a></li>
+                <li class="nav-item"><a class="nav-link" href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+            </ul>
         </div>
-        <div class="details-container">
-            <div class="link-container">
-                <a class="link" href="'/details?recipeId=' + ${recipe.id}" th:text="${recipe.name}"></a>
-            </div>
-            <div class="favorite-button">
+    </nav>
 
-            </div>
-            <div class="summary" th:text="${recipe.recipeDescription.description}">
+    <!-- <ul class="nav">
+         <li class="active"><a class="nav-link" href="/recipes">Home</a></li>
+         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+         <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li>
+         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+     </ul>-->
+ </header>
 
-            </div>
-        </div>
-    </div>
-</div>
+ <div th:fragment="recipe-card">
+     <div th:each="recipe : ${recipes}">
+         <div class="image_container">
+             <a class="image" href="'/details?recipeId=' + ${recipe.id}" th:text="${recipe.name}"></a>
+         </div>
+         <div class="details-container">
+             <div class="link-container">
+                 <a class="link" href="'/details?recipeId=' + ${recipe.id}" th:text="${recipe.name}"></a>
+             </div>
+             <div class="favorite-button">
 
-</body>
-</html>
+             </div>
+             <div class="summary" th:text="${recipe.recipeDescription.description}">
+
+             </div>
+         </div>
+     </div>
+ </div>
+
+ </body>
+ </html>
