--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,10 +3,9 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
+<header th:replace="fragments :: header"></header>
 
-<nav th:replace="fragments :: header"></nav>
 
-<div th:replace="fragments :: recipe-card"></div>
 
 </body>
 </html>
