--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -6,37 +6,38 @@
 <header th:replace="fragments :: header"></header>
 
 <!--TODO make the inputs do what they're supposed to do -->
+
 <form method="post" action="/recipes/create">
     <div class="form-group">
-        <label>Name
+        <label>Name:
             <input th:field="${recipe.name}" class="form-control">
         </label>
         <p class="error" th:errors="${recipe.name}"></p>
     </div>
 
     <div class="form-group">
-        <label>Ingredients
-            <input th:field="${recipe.name}" class="form-control">
+        <label>Ingredients:
+            <textarea th:field="${recipe.name}" class="form-control"></textarea>
         </label>
         <p class="error" th:errors="${recipe.name}"></p>
     </div>
 
     <div class="form-group">
-        <label>Directions
-            <input th:field="${recipe.name}" class="form-control">
+        <label>Directions:
+            <textarea th:field="${recipe.name}" class="form-control"></textarea>
         </label>
         <p class="error" th:errors="${recipe.name}"></p>
     </div>
 
     <div class="form-group">
-        <label>Description
-            <input th:field="${recipe.recipeDescription.description}" class="form-control">
+        <label>Description:
+            <textarea th:field="${recipe.recipeDescription.description}" class="form-control"></textarea>
         </label>
         <p class="error" th:errors="${recipe.recipeDescription.description}"></p>
     </div>
 
     <div class="form-group">
-        <label>Category
+        <label>Category:
             <select th:field="${recipe.recipeCategory}">
                 <option th:each="recipeCategory : ${categories}"
                         th:value="${recipeCategory.id}"
@@ -54,6 +55,7 @@
         <input type="submit" value="Add Recipe" class="btn btn-success">
     </div>
 </form>
+
 
 </body>
 </html>
