created the Create Recipe modal

--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -7,6 +7,76 @@
 
 <!--TODO make the inputs do what they're supposed to do -->
 
+<!-- Modal -->
+<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Create Recipe</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post" action="/recipes/create">
+                    <div class="form-group">
+                        <label>Name:
+                            <input th:field="${recipe.name}" class="form-control">
+                        </label>
+                        <p class="error" th:errors="${recipe.name}"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Ingredients:
+                            <textarea th:field="${recipe.name}" class="form-control"></textarea>
+                        </label>
+                        <p class="error" th:errors="${recipe.name}"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Directions:
+                            <textarea th:field="${recipe.name}" class="form-control"></textarea>
+                        </label>
+                        <p class="error" th:errors="${recipe.name}"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Description:
+                            <textarea th:field="${recipe.recipeDescription.description}" class="form-control"></textarea>
+                        </label>
+                        <p class="error" th:errors="${recipe.recipeDescription.description}"></p>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Category:
+                            <select th:field="${recipe.recipeCategory}">
+                                <option th:each="recipeCategory : ${categories}"
+                                        th:value="${recipeCategory.id}"
+                                        th:text="${recipeCategory.name}">
+                                </option>
+
+                            </select>
+                            <p class="error" th:errors="${recipe.recipeCategory}"></p>
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Upload Image" class="btn btn-success">
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Add Recipe" class="btn btn-success">
+                    </div>
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
 <form method="post" action="/recipes/create">
     <div class="form-group">
         <label>Name:
@@ -55,7 +125,7 @@
         <input type="submit" value="Add Recipe" class="btn btn-success">
     </div>
 </form>
-
+-->
 
 </body>
 </html>
