--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -25,7 +25,13 @@
             </div>
 
             <ul class="nav navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li>
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#create">
+                    Create Recipe
+                </button>
+
+              <!--  <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li> -->
             </ul>
 
             <!--TODO make search bar functional-->
