Rectified problems with ingredients and directions classes

--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -16,16 +16,16 @@
 
     <div class="form-group">
         <label>Ingredients
-            <input th:field="${recipe.name}" class="form-control">
+            <input th:field="${recipe.recipeIngredients}" class="form-control">
         </label>
-        <p class="error" th:errors="${recipe.name}"></p>
+        <p class="error" th:errors="${recipe.recipeIngredients}"></p>
     </div>
 
     <div class="form-group">
         <label>Directions
-            <input th:field="${recipe.name}" class="form-control">
+            <input th:field="${recipe.recipeDirections}" class="form-control">
         </label>
-        <p class="error" th:errors="${recipe.name}"></p>
+        <p class="error" th:errors="${recipe.recipeDirections}"></p>
     </div>
 
     <div class="form-group">
@@ -48,7 +48,7 @@
         </label>
     </div>
     <div class="form-group">
-        <input type="submit" value="Upload Image" class="btn btn-success">
+        <input type="submit" value="Upload Image"class="btn btn-success">
     </div>
     <div class="form-group">
         <input type="submit" value="Add Recipe" class="btn btn-success">
