--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -28,21 +28,21 @@
 
                     <div class="form-group">
                         <label>Ingredients:
-                            <textarea th:field="${recipe.name}" class="form-control"></textarea>
+                            <input th:field="${recipe.name}" class="form-control">
                         </label>
                         <p class="error" th:errors="${recipe.name}"></p>
                     </div>
 
                     <div class="form-group">
                         <label>Directions:
-                            <textarea th:field="${recipe.name}" class="form-control"></textarea>
+                            <input th:field="${recipe.name}" class="form-control">
                         </label>
                         <p class="error" th:errors="${recipe.name}"></p>
                     </div>
 
                     <div class="form-group">
                         <label>Description:
-                            <textarea th:field="${recipe.recipeDescription.description}" class="form-control"></textarea>
+                            <input th:field="${recipe.recipeDescription.description}" class="form-control"></input>
                         </label>
                         <p class="error" th:errors="${recipe.recipeDescription.description}"></p>
                     </div>
