--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,42 @@
 
 <header th:replace="fragments :: header"></header>
 
+<!-- Create Login Modal -->
+<div class="modal fade" id="login" tabindex="-1" role="form" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+                    <div class="form-group">
+                        <label th:for="username">Username
+                            <input class="form-control" th:field="${loginFormDTO.username}">
+                        </label>
+                        <p class="error" th:errors="${loginFormDTO.username}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Password
+                            <input class="form-control" th:field="${loginFormDTO.password}" type="password">
+                        </label>
+                        <p class="error" th:errors="${loginFormDTO.password}"></p>
+                    </div>
+
+                    <input type="submit" class="btn btn-primary" value="Log In"/>
+                </form>
+
+                <p>Don't have an account? <a href="/register">Register for one.</a></p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
 <form method="post">
     <div class="form-group">
         <label th:for="username">Username
@@ -23,6 +59,7 @@
 </form>
 
 <p>Don't have an account? <a href="/register">Register for one.</a></p>
+-->
 
 </body>
 </html>
