added register modal

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,7 +48,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <!-- Login Modal Link -->
                 <li class="nav-item"><a class="nav-link" href="#login" data-toggle="modal" data-target="#login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="/register"><span class="glyphicon glyphicon-ok"></span> Register</a></li>
+                <!-- Register Modal Link -->
+                <li class="nav-item"><a class="nav-link" href="#register" data-toggle="modal" data-target="#register"><span class="glyphicon glyphicon-ok"></span> Register</a></li>
                 <li class="nav-item"><a class="nav-link" href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
             </ul>
         </div>
