--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,45 @@
 
 <header th:replace="fragments :: header"></header>
 
+<!-- Create Register Modal -->
+<div class="modal fade" id="register" tabindex="-1" role="form" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="register_header">Register</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+                    <div class="form-group">
+                        <label>Username:
+                            <input class="form-control" th:field="${registerFormDTO.username}" />
+                        </label>
+                        <p class="error" th:errors="${registerFormDTO.username}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Password:
+                            <input class="form-control" th:field="${registerFormDTO.password}" type="password" />
+                        </label>
+                        <p class="error" th:errors="${registerFormDTO.password}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label>Verify Password:
+                            <input class="form-control" th:field="${registerFormDTO.verifyPassword}" type="password" />
+                        </label>
+                    </div>
+
+                    <input type="submit" class="btn btn-primary" value="Register" />
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
 <form method="post">
     <div class="form-group">
         <label>Username
@@ -26,6 +65,7 @@
 
     <input type="submit" class="btn btn-primary" value="Register" />
 </form>
+-->
 
 </body>
 </html>
