--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <h5 class="modal-title" id="login_header">Login</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -18,13 +18,13 @@
             <div class="modal-body">
                 <form method="post">
                     <div class="form-group">
-                        <label th:for="username">Username
+                        <label th:for="username">Username:
                             <input class="form-control" th:field="${loginFormDTO.username}">
                         </label>
                         <p class="error" th:errors="${loginFormDTO.username}"></p>
                     </div>
                     <div class="form-group">
-                        <label>Password
+                        <label>Password:
                             <input class="form-control" th:field="${loginFormDTO.password}" type="password">
                         </label>
                         <p class="error" th:errors="${loginFormDTO.password}"></p>
