--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
                     <input type="submit" class="btn btn-primary" value="Log In"/>
                 </form>
 
-                <p>Don't have an account? <a href="/register">Register for one.</a></p>
+                <p>Don't have an account? <a href="#register" data-toggle="modal" data-target="#register" data-dismiss="modal">Register for one.</a></p>
 
             </div>
         </div>
