added todo for modal form backend

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
 
                     <input type="submit" class="btn btn-primary" value="Log In"/>
                 </form>
-
+                <!-- TODO fix backend to allow modals to open from home url -->
                 <p>Don't have an account? <a href="#register" data-toggle="modal" data-target="#register" data-dismiss="modal">Register for one.</a></p>
 
             </div>
