--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -60,7 +60,7 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Upload Image" class="btn btn-success">
+                        <input type="file" value="Upload Image" th:field="${recipe.recipeImage.image}" accept="image/png, image/jpeg" class="btn btn-success">
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Add Recipe" class="btn btn-success">
