--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,7 +53,19 @@
                 <li class="nav-item"><a class="nav-link" href="#login" data-toggle="modal" data-target="#login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 <!-- Register Modal Link -->
                 <li class="nav-item"><a class="nav-link" href="#register" data-toggle="modal" data-target="#register"><span class="glyphicon glyphicon-ok"></span> Register</a></li>
-                <li class="nav-item"><a class="nav-link" href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                <!--Profile Dropdown-->
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="btn navbar-btn btn-link dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Profile
+                            <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--<li class="nav-item"><a class="nav-link" href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>-->
             </ul>
         </div>
     </nav>
