changed navbar from static to fixed

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,8 +18,8 @@
 
 <header th:fragment="header">
 
-    <!--<nav class="navbar navbar-default navbar-fixed-top navbar-static-top">-->
-    <nav class="navbar navbar-default navbar-static-top">
+
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/recipes">The Recipe Project</a>
