added functionality to hide the create recipe button while not logged in

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,7 +33,7 @@
             <ul class="nav navbar-nav">
 
                 <!-- Button to trigger create recipe modal -->
-                <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#create">
+                <button id="createRecipeButton" type="button" class="btn btn-primary navbar-btn hidden" data-toggle="modal" data-target="#create">
                     Create Recipe
                 </button>
 
