--- a/src/main/resources/templates/recipes/recipeModal.html
+++ b/src/main/resources/templates/recipes/recipeModal.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-
-<nav th:replace="fragments :: header"></nav>
-
-<!-- recipe modal -->
 <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -26,8 +22,6 @@
         </div>
     </div>
 </div>
-
-<div th:replace="fragments :: recipe-card"></div>
 
 </body>
 </html>
