--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -34,7 +34,7 @@
             <ul class="nav navbar-nav">
 
                 <!-- Button to trigger create recipe modal -->
-                <button id="createRecipeButton" type="button" class="btn btn-primary navbar-btn " data-toggle="modal" data-target="#create">
+                <button id="createRecipeButton" type="button" class="btn btn-primary navbar-btn hidden" data-toggle="modal" data-target="#create">
                     Create Recipe
                 </button>
 
@@ -70,18 +70,48 @@
                         </ul>
                     </div>
                 </li>
-                <!--<li class="nav-item"><a class="nav-link" href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>-->
             </ul>
         </div>
+
+        <script type="text/javascript">
+            document.getElementById("createRecipeButton").onclick = function() {
+                location.href='http://localhost:8080/recipes/create';
+            }
+
+            document.getElementById("loginButton").onclick = function() {
+                location.href='http://localhost:8080/login';
+            }
+
+            document.getElementById("registerButton").onclick = function() {
+                location.href='http://localhost:8080/register';
+            }
+        </script>
+
     </nav>
 
-    <!-- <ul class="nav">
-         <li class="active"><a class="nav-link" href="/recipes">Home</a></li>
-         <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-         <li class="nav-item"><a class="nav-link" href="/recipes/create">Add Recipe</a></li>
-         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-     </ul>-->
  </header>
+
+<div th:fragment="recipe-modal">
+    <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
  <div th:fragment="recipe-card">
      <div th:each="recipe : ${recipes}" class="col-xs-5 col-md-4">
