--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,11 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<header th:replace="fragments :: header"></header>
+<nav th:replace="fragments :: header"></nav>
+
+<script>
+    $(document).ready(function(){ $('#login').modal('show'); });
+</script>
 
 <!-- Create Login Modal -->
 <div class="modal fade" id="login" tabindex="-1" role="form" aria-hidden="true">
@@ -11,7 +15,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="login_header">Login</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button id="loginClose" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -30,36 +34,25 @@
                         <p class="error" th:errors="${loginFormDTO.password}"></p>
                     </div>
 
-                    <input type="submit" class="btn btn-primary" value="Log In"/>
+                    <input id="loginSubmit" type="submit" class="btn btn-primary" value="Log In"/>
                 </form>
                 <!-- TODO fix backend to allow modals to open from home url -->
-                <p>Don't have an account? <a href="#register" data-toggle="modal" data-target="#register" data-dismiss="modal">Register for one.</a></p>
+                <p>Don't have an account? <a href="/register">Register for one.</a></p>
 
             </div>
         </div>
     </div>
 </div>
 
-<!--
-<form method="post">
-    <div class="form-group">
-        <label th:for="username">Username
-            <input class="form-control" th:field="${loginFormDTO.username}">
-        </label>
-        <p class="error" th:errors="${loginFormDTO.username}"></p>
-    </div>
-    <div class="form-group">
-        <label>Password
-            <input class="form-control" th:field="${loginFormDTO.password}" type="password">
-        </label>
-        <p class="error" th:errors="${loginFormDTO.password}"></p>
-    </div>
+<script>
+    document.getElementById("loginClose").onclick = function() {
+        location.href='http://localhost:8080/recipes';
+    }
 
-    <input type="submit" class="btn btn-primary" value="Log In"/>
-</form>
-
-<p>Don't have an account? <a href="/register">Register for one.</a></p>
--->
+    document.getElementById("loginSubmit").onclick = function() {
+        location.href='http://localhost:8080/recipes';
+    }
+</script>
 
 </body>
 </html>
