--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -3,25 +3,35 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<header th:replace="fragments :: header"></header>
+
+<nav th:replace="fragments :: header"></nav>
+
+<script>
+    $(document).ready(function(){ $('#create').modal('show'); });
+</script>
 
 <!--TODO make the inputs do what they're supposed to do -->
 
-<!-- Create Recipe Modal -->
+<div th:replace="fragments :: recipe-modal"></div>
+
+<div th:replace="fragments :: recipe-card"></div>
+
+<!-- Create Recipe Modal-->
 <div class="modal fade" id="create" tabindex="-1" role="form" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="create_recipe_header">Create Recipe</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button id="closeCreateButton" type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
+                    `
                 </button>
             </div>
             <div class="modal-body">
                 <form method="post" action="/recipes/create">
                     <div class="form-group">
                         <label>Name:
-                            <input th:field="${recipe.name}" class="form-control">
+                            <input th:field="${recipe.name}" minlength="10" maxlength="50" class="form-control">
                         </label>
                         <p class="error" th:errors="${recipe.name}"></p>
                     </div>
@@ -63,7 +73,7 @@
                         <input type="file" value="Upload Image" th:field="${recipe.recipeImage.image}" accept="image/png, image/jpeg" class="btn btn-success">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Add Recipe" class="btn btn-success">
+                        <input id="createSubmitButton" type="submit" value="Add Recipe" class="btn btn-success">
                     </div>
                 </form>
 
@@ -72,51 +82,16 @@
     </div>
 </div>
 
-<!--
-<form method="post" action="/recipes/create">
-    <div class="form-group">
-        <label>Name:
-            <input th:field="${recipe.name}" class="form-control">
-        </label>
-        <p class="error" th:errors="${recipe.name}"></p>
-    </div>
-    <div class="form-group">
-        <label>Ingredients:
-            <textarea th:field="${recipe.name}" class="form-control"></textarea>
-        </label>
-        <p class="error" th:errors="${recipe.name}"></p>
-    </div>
-    <div class="form-group">
-        <label>Directions:
-            <textarea th:field="${recipe.name}" class="form-control"></textarea>
-        </label>
-        <p class="error" th:errors="${recipe.name}"></p>
-    </div>
-    <div class="form-group">
-        <label>Description:
-            <textarea th:field="${recipe.recipeDescription.description}" class="form-control"></textarea>
-        </label>
-        <p class="error" th:errors="${recipe.recipeDescription.description}"></p>
-    </div>
-    <div class="form-group">
-        <label>Category:
-            <select th:field="${recipe.recipeCategory}">
-                <option th:each="recipeCategory : ${categories}"
-                        th:value="${recipeCategory.id}"
-                        th:text="${recipeCategory.name}">
-                </option>
-            </select>
-            <p class="error" th:errors="${recipe.recipeCategory}"></p>
-        </label>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Upload Image" class="btn btn-success">
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Add Recipe" class="btn btn-success">
-    </div>
-</form>
--->
+<script>
+    document.getElementById("closeCreateButton").onclick = function() {
+        location.href='http://localhost:8080/recipes';
+    }
+
+    document.getElementById("createSubmitButton").onclick = function() {
+        location.href='http://localhost:8080/recipes';
+    }
+</script>
+
 
 </body>
 </html>
