--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -68,7 +68,9 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <input type="file" value="Upload Image" th:field="${recipe.recipeImage.image}" accept="image/png, image/jpeg" class="btn btn-success">
+                        <label>Image URL:<br>
+                            <input th:field="${recipe.recipeImage.image}">
+                        </label>
                     </div>
                     <div class="form-group">
                         <input id="createSubmitButton" type="submit" value="Add Recipe" class="btn btn-success">
