--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -41,9 +41,9 @@
             </ul>
 
             <!--TODO make search bar functional-->
-            <form class="navbar-form navbar-left" action="">
+            <form class="navbar-form navbar-left" th:action="@{/recipes/search/results}" method="post">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Search" name="searchTerm" id="searchTerm">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
