--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -64,7 +64,7 @@
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/recipes" id="logoutButton">Logout</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout" id="logoutButton">Logout</a></li>
                         </ul>
                     </div>
                 </li>
