changed profile dropwdown to logout button temporarily

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -56,7 +56,11 @@
                 <li id="loginButton" class="nav-item"><a class="nav-link" href="#login" data-toggle="modal" data-target="#login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 <!-- Register Modal Link -->
                 <li id="registerButton" class="nav-item"><a class="nav-link" href="#register" data-toggle="modal" data-target="#register"><span class="glyphicon glyphicon-ok"></span> Register</a></li>
+                <!-- Logout Button -->
+                <li class="nav-item"><a class="nav-link hidden" href="/logout" id="logoutButton"><span class="glyphicon glyphicon-remove"></span> Logout</a></li>
+
                 <!--Profile Dropdown-->
+                <!--
                 <li id="profileButton" class="nav-item hidden">
                     <div class="dropdown">
                         <button class="btn navbar-btn btn-link dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Profile
@@ -68,6 +72,7 @@
                         </ul>
                     </div>
                 </li>
+                -->
             </ul>
         </div>
         <!-- Redirects Nav-Buttons to Appropriate Pages  -->
