--- a/src/main/resources/templates/recipes/create.html
+++ b/src/main/resources/templates/recipes/create.html
@@ -90,6 +90,13 @@
     document.getElementById("createSubmitButton").onclick = function() {
         location.href='http://localhost:8080/recipes';
     }
+
+    $("#loginButton").hide();
+    $("#registerButton").hide();
+    $("#createRecipeButton").removeClass("hidden");
+    $("#logoutButton").removeClass("hidden");
+    $("#searchBar").removeClass("hidden");
+
 </script>
 
 
