--- a/src/main/resources/templates/recipes/search.html
+++ b/src/main/resources/templates/recipes/search.html
@@ -8,5 +8,13 @@
 
 <div th:replace="fragments :: recipe-card"></div>
 
+<script>
+    $("#loginButton").hide();
+    $("#registerButton").hide();
+    $("#createRecipeButton").removeClass("hidden");
+    $("#logoutButton").removeClass("hidden");
+    $("#searchBar").removeClass("hidden");
+</script>
+
 </body>
 </html>
