--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -55,6 +55,10 @@
     document.getElementById("registerSubmit").onclick = function() {
         location.href='http://localhost:8080/recipes';
     }
+
+    $("#loginButton").hide();
+    $("#registerButton").hide();
+
 </script>
 
 </body>
