--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,6 +52,10 @@
     document.getElementById("loginSubmit").onclick = function() {
         location.href='http://localhost:8080/recipes';
     }
+
+    $("#loginButton").hide();
+    $("#registerButton").hide();
+
 </script>
 
 </body>
