--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,6 +53,12 @@
         location.href='http://localhost:8080/recipes';
     }
 
+    $(document).ready(function(e) {
+        $('#login').on('hidden.bs.modal', function(e) {
+            window.location.href = '/recipes'
+        });
+    });
+
     $("#loginButton").hide();
     $("#registerButton").hide();
 
