--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -56,6 +56,12 @@
         location.href='http://localhost:8080/recipes';
     }
 
+    $(document).ready(function(e) {
+        $('#register').on('hidden.bs.modal', function(e) {
+            window.location.href = '/recipes'
+        });
+    });
+
     $("#loginButton").hide();
     $("#registerButton").hide();
 
